fix(elements): update control height and control contrast corrections
- Updated control height variables to use system-level interaction field height across various components.
- Fixed issue with incorrect interaction state computed colors due to bad inheritance
- Fixed issue when a control/interaction failed to have contrast due to no inherited background to compute from

--- a/projects/elements/src/forms/control/control.css
+++ b/projects/elements/src/forms/control/control.css
@@ -7,12 +7,16 @@
   --label-font-weight: var(--nve-ref-font-weight-medium);
   --label-font-size: var(--nve-ref-font-size-100);
   --control-width: 100%;
-  --control-height: auto;
+  --control-height: var(--nve-sys-interaction-field-height);
   --_label-width: var(--label-width, 180px);
-  --nve-sys-interaction-state-base: var(--background);
+  --nve-sys-interaction-state-base: var(--background, var(--nve-sys-layer-canvas-background));
   --opacity: 1;
   --filter: none;
   contain: content;
+}
+
+:host([nve-control='inline']) {
+  --control-height: auto;
 }
 
 ::slotted(*) {
